--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.6.2",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.4",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
+    "sweetalert2": "^11.10.4",
     "swiper": "^9.1.0",
     "web-vitals": "^2.1.4"
   },
